<resources>
    <string name="app_name">Glosa</string>
    <string name="no_text_detected">**NOTE: No Text Detected In Image You Provided. This is a filler text**</string>
    <string name="recording_stopped">Recording Stopped!</string>
    <string name="language_not_supported_for_readback">Language Not Supported For Read Back At This Time</string>
    <string name="not_synthesized">Not Synthesized</string>
    <string name= "synthesized">Synthesized</string>
    <string name ="translated_text_true">True</string>
    <string name= "translated_text_false">False</string>
    <string name= "recording_in_progress">Recording In Progress!!</string>
    <string name= "sourceLanguage_targetLanguage">Source language and target language cannot be the same</string>
    <string name= "copyLabel">Copied Text</string>
    <string name= "copyBody">Copied To Clipboard</string>
    <string name= "no_text_for_playback">No Text For Playback</string>
    <string name= "cleared_text"> </string>
    <string name= "imageType">"image/*"</string>
    <string name= "doc">Doc</string>
    <string name= "ocr_text">OcrText</string>
    <string name= "permission_denied">Permission Denied</string>
    <string name= "no_data">No Data</string>
    <string name="glosa">Glosa</string>
    <string name="enter">Enter</string>
    <string name="translated_text_here">Translated Text Here..</string>
    <string name="translate">Translate</string>
    <string name="record">Record</string>
    <string name="read">Read</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="the_text_body_is_empty_or_this_language_model_is_not_supported_as_of_now">The text body is empty or this Language Model Is Not Supported As Of Now</string>
    <string-array name="languages_spinner1">
        <item>English</item>
        <item>German</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Portuguese</item>
        <item>Italian</item>

    </string-array>

    <string-array name="languages_spinner2">
        <item>Spanish</item>
        <item>English</item>
        <item>Dutch</item>
        <item>Czech</item>
        <item>German</item>
        <item>French</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Swedish</item>
        <item>Italian</item>

    </string-array>
</resources>