<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textToBeTranslatedView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.TranslatorActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/glossaCardView"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:background="@color/main"
                android:visibility="gone"
                app:cardBackgroundColor="@color/main"
                app:cardCornerRadius="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/glossaTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/glosa"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/ocrImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/gallery_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="431dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="35dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toTopOf="@+id/record_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="64dp">

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="96dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/switchLanguages"
                        android:layout_width="59dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toTopOf="@+id/divider2"
                        app:layout_constraintEnd_toStartOf="@+id/targetLanguageSpinner"
                        app:layout_constraintStart_toEndOf="@+id/sourceLanguageSpinner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="swap_languages.json"
                        app:lottie_loop="false" />

                    <Spinner
                        android:id="@+id/sourceLanguageSpinner"
                        android:layout_width="123dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="10dp"
                        android:padding="4dp"
                        app:layout_constraintBottom_toTopOf="@+id/divider2"
                        app:layout_constraintEnd_toStartOf="@+id/switchLanguages"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/switchLanguages"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Spinner
                        android:id="@+id/targetLanguageSpinner"
                        android:layout_width="125dp"
                        android:layout_height="57dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="10dp"
                        android:padding="4dp"
                        app:layout_constraintBottom_toTopOf="@+id/divider2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/switchLanguages"
                        app:layout_constraintTop_toTopOf="@+id/switchLanguages"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/translatedTextLayour_view1"
                        android:layout_width="match_parent"

                        android:layout_height="213dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="7dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider2">


                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="1dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/nestedScrollView2"
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="1dp"
                            android:fillViewport="true"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">


                                <EditText
                                    android:id="@+id/textPreTranslation"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:ems="10"
                                    android:focusable="true"
                                    android:gravity="top"
                                    android:hint="@string/enter"
                                    android:inputType="textMultiLine"
                                    android:scrollbars="vertical"
                                    android:textSize="18sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.core.widget.NestedScrollView>

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/nestedScrollView"
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="1dp"
                            android:fillViewport="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/translatedTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/translated_text_here"
                                    android:maxLines="5"
                                    android:textColor="@color/main"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />


                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.core.widget.NestedScrollView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/clearText"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/translateAndStopButton"
                        app:layout_constraintEnd_toStartOf="@+id/toClipBoard"
                        app:layout_constraintStart_toStartOf="@+id/switchLanguages"
                        app:srcCompat="@drawable/ic_clear" />

                    <ImageView
                        android:id="@+id/toClipBoard"
                        android:layout_width="37dp"
                        android:layout_height="41dp"
                        android:layout_marginStart="7dp"
                        app:layout_constraintBottom_toBottomOf="@+id/clearText"
                        app:layout_constraintEnd_toEndOf="@+id/switchLanguages"
                        app:layout_constraintStart_toEndOf="@+id/clearText"
                        app:layout_constraintTop_toTopOf="@+id/clearText"
                        app:srcCompat="@drawable/ic_copy" />

                    <Button
                        android:id="@+id/translateAndStopButton"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="64dp"
                        android:background="@color/grey"
                        android:enabled="false"
                        android:text="@string/translate"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/translatedTextLayour_view1"
                        app:layout_constraintHorizontal_bias="0.416"
                        app:layout_constraintStart_toStartOf="@+id/translatedTextLayour_view1"
                        app:layout_constraintTop_toBottomOf="@+id/translatedTextLayour_view1" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animation"
                        android:layout_width="157dp"
                        android:layout_height="65dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/translateAndStopButton"
                        app:layout_constraintEnd_toEndOf="@+id/translatedTextLayour_view1"
                        app:layout_constraintStart_toStartOf="@+id/translatedTextLayour_view1"
                        app:layout_constraintTop_toBottomOf="@+id/translatedTextLayour_view1"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="micblue.json"
                        app:lottie_loop="true" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/record_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:backgroundTint="@null"
                android:text="@string/record"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/speak_back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/speak_back_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:backgroundTint="@null"
                android:text="@string/read"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/gallery_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:background="@color/white"
                android:backgroundTint="@null"
                android:text="@string/gallery"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/camera_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/camera_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:backgroundTint="@null"
                android:text="@string/camera"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>